--- a/view/adminhtml/templates/system/config/update.phtml
+++ b/view/adminhtml/templates/system/config/update.phtml
@@ -42,6 +42,7 @@
 </script>
 
 <?php echo $block->getButtonHtml() ?>
+<p class="note"><?php echo __('Check if new AJAX-ZOOM (core files) version is available. It is located in /js/axzoom/axZm folder.') ?></p>
 <span class="collect-indicator" id="update_span">
     <img class="processing" hidden="hidden" alt="Updating" style="margin:0 5px" src="<?php echo $block->getViewFileUrl('images/process_spinner.gif') ?>"/>
     <img class="updated" hidden="hidden" alt="Updated" style="margin:-3px 5px" src="<?php echo $block->getViewFileUrl('images/rule_component_apply.gif') ?>"/>
