--- a/view/adminhtml/templates/tab-video.phtml
+++ b/view/adminhtml/templates/tab-video.phtml
@@ -1,28 +1,28 @@
 <?php
-$az_videos 		= $this->getVideos();
-$az_languages 	= $this->getStoreLanguages();
+$az_videos         = $this->getVideos();
+$az_languages     = $this->getStoreLanguages();
 
 // associated products !!! AZ: get associated
-$associated = array();
+$associated = [];
 ?>
 <div id="" class="entry-edit ax-tab">
-	<div class="fieldset-wrapper">
-		<div class="fieldset-wrapper-title admin__fieldset-wrapper-title ax-tab-title">
-			<strong class="title"><?php echo __('Videos: YouTube, Vimeo, Dailymotion, MP4') ?></strong>
-		</div>
-	</div>
-	<div class="fieldset fieldset-wide ax-tab-content" id="group_fields9">
+    <div class="fieldset-wrapper">
+        <div class="fieldset-wrapper-title admin__fieldset-wrapper-title ax-tab-title">
+            <strong class="title"><?php echo __('Videos: YouTube, Vimeo, Dailymotion, MP4') ?></strong>
+        </div>
+    </div>
+    <div class="fieldset fieldset-wide ax-tab-content" id="group_fields9">
 
-    	<p class="message message-info">
-	        <?php
-	        echo __('With this widget you can define videos from YouTube, Vimeo, Dailymotion or link to mp4 videos located else where. ');
-	        echo __('For variable product, you are able to associate videos only with certain product variations. ');
-	        echo __('Also you can, but not obligated to, define alternative video sources for shop languages. ');
-	        echo __('Let us know if your are missing something. ');
-	        echo __('Your ideas are greatly appreciated!');
-	        ?>
-    	</p>
-    	<br>
+        <p class="message message-info">
+            <?php
+            echo __('With this widget you can define videos from YouTube, Vimeo, Dailymotion or link to mp4 videos located else where. ');
+            echo __('For variable product, you are able to associate videos only with certain product variations. ');
+            echo __('Also you can, but not obligated to, define alternative video sources for shop languages. ');
+            echo __('Let us know if your are missing something. ');
+            echo __('Your ideas are greatly appreciated!');
+            ?>
+        </p>
+        <br>
         <div class="hor-scroll">
             <table cellspacing="0" class="form-list">
                 <tbody>
@@ -71,11 +71,11 @@ $associated = array();
                             </td>
                             <td class="scope-label"><span class="nobr"></span></td>
                         </tr>
-                        <?php if (count($az_languages)): ?>
+                        <?php if (count($az_languages)) : ?>
                         <tr>
                             <td class="label"><label><?php echo __('Key / Url (international)'); ?></label></td>
                             <td class="value">
-                                <?php foreach ($az_languages as $id => $name): ?>
+                                <?php foreach ($az_languages as $id => $name) : ?>
                                 <div class="row">
                                     <span style="min-width: 50px; display: inline-block;"><?php echo strtoupper($name); ?></span>
                                     <input type="text" name="az_video_lang_edit[<?php echo $id; ?>]"
@@ -91,7 +91,7 @@ $associated = array();
                         </tr>
                         <?php endif; ?>
 
-                        <?php if (count($associated)): ?>
+                        <?php if (count($associated)) : ?>
                         <tr id="az_comb_video">
                             <td class="label"><label><?php echo __('Combinations'); ?></label></td>
                             <td class="value">
@@ -99,7 +99,7 @@ $associated = array();
                                     <?php echo __('check all'); ?>
                                 </button><br>
 
-                                <?php foreach ($associated as $id => $name): ?>
+                                <?php foreach ($associated as $id => $name) : ?>
                                 <input type="checkbox" name="az_combinations_video[]" value="<?php echo $id ?>" 
                                     class="az_settings_combinations_video">  <?php echo $name ?><br>
                                 <?php endforeach; ?>
@@ -132,7 +132,7 @@ $associated = array();
                                                 <div class="row_">
                                                     <button class="scalable add" id="az_link_add_option_video" style="margin-top: 5px;">
                                                          <span><span><span>
-                                                         <?php echo __('Add an option'); ?>
+                                                            <?php echo __('Add an option'); ?>
                                                          </span></span></span>
                                                     </button>
                                                     <p class="note">
@@ -195,10 +195,10 @@ $associated = array();
             <br>
             <div class="row" id="az_newFormVideo" style="display: none">
                 <p class="message message-info">
-	                <?php
-	                echo __('After adding basic information in the fields below you can open the new entry in "existing videos" dropdown above and change the data. ');
-	                echo __('Also provide language specific values and assign the video to associated products if needed. ');
-	                ?>
+                    <?php
+                    echo __('After adding basic information in the fields below you can open the new entry in "existing videos" dropdown above and change the data. ');
+                    echo __('Also provide language specific values and assign the video to associated products if needed. ');
+                    ?>
                 </p>
                 <table cellspacing="0" class="form-list" style="margin-top: 10px;">
                     <tbody>
@@ -251,80 +251,80 @@ $associated = array();
 
 
 
-		<div class="hor-scroll">
-			<div class="row">
-		        <div class="grid">
-		            <table class="data border data-grid" id="az_videosTable" cellspacing="0">
-		                <thead>
-		                    <tr class="headings">
-		                        <th class="data-grid-th fixed-width-lg"><span class="title_box"></span></th>
-		                        <th class="data-grid-th"><span class="title_box"><?php echo __('Name'); ?></span></th>
-		                        <th class="data-grid-th" style="width: 100px;"><span class="title_box"><?php echo __('Active'); ?></span></th>
-		                        <th class="data-grid-th"><span class="title_box"><?php echo __('Type'); ?></span></th>
-		                        <th class="data-grid-th"><span class="title_box"><?php echo __('Key / Link'); ?></span></th>
-		                        <th class="data-grid-th last" style="width: 250px;"></th> <!-- action -->
-		                    </tr>
-		                </thead>
-		                <tbody id="az_videosTableRows">
-		                </tbody>
-		            </table>
+        <div class="hor-scroll">
+            <div class="row">
+                <div class="grid">
+                    <table class="data border data-grid" id="az_videosTable" cellspacing="0">
+                        <thead>
+                            <tr class="headings">
+                                <th class="data-grid-th fixed-width-lg"><span class="title_box"></span></th>
+                                <th class="data-grid-th"><span class="title_box"><?php echo __('Name'); ?></span></th>
+                                <th class="data-grid-th" style="width: 100px;"><span class="title_box"><?php echo __('Active'); ?></span></th>
+                                <th class="data-grid-th"><span class="title_box"><?php echo __('Type'); ?></span></th>
+                                <th class="data-grid-th"><span class="title_box"><?php echo __('Key / Link'); ?></span></th>
+                                <th class="data-grid-th last" style="width: 250px;"></th> <!-- action -->
+                            </tr>
+                        </thead>
+                        <tbody id="az_videosTableRows">
+                        </tbody>
+                    </table>
 
-		            <table id="az_lineSetVideo" style="display: none;">
-		                <tr id="az_video_line_id">
-		                    <td class="az_tbl_vid_img">
-		                        <img src="<?php echo $this->getBaseUrl() ?>axzoom/default-video-thumbnail.jpg" 
-		                            alt="img" title="img" 
-		                            class="img-thumbnail" 
-		                            style="max-width: 100px; cursor: pointer;">
-		                    </td>
-		                    <td class="az_tbl_vid_name">
-		                        video_name
-		                    </td>
-		                    <td>
-		                        <span class="switch prestashop-switch fixed-width-lg hide_class az_switch_status_video">
-		                            <input type="radio" name="status_field" id="status_field_on" value="1" checked_on />
-		                            <label class="t" for="status_field_on"><?php echo __('Yes'); ?></label>
-		                            <input type="radio" name="status_field" id="status_field_off" value="0" checked_off />
-		                            <label class="t" for="status_field_off"><?php echo __('No'); ?></label>
-		                            <a class="slide-button btn"></a>
-		                        </span>
-		                    </td>
-		                    <td class="az_tbl_vid_type">video_type</td>
-		                    <td class="az_tbl_vid_uid" style="word-break: break-all;">video_uid</td>
-		                    <td>
-		                        <button class="az_delete_video scalable delete" style="margin-bottom: 5px;">
-		                            <span> <?php echo __('Delete'); ?></span>
-		                        </button>
-		                        <button class="az_preview_video " style="margin-bottom: 5px;">
-		                            <span> <?php echo __('Preview'); ?> </span>
-		                        </button>
-		                        <button class="az_edit_video " style="margin-bottom: 5px;">
-		                            <span> <?php echo __('Edit'); ?></span>
-		                        </button>
-		                    </td>
-		                </tr>
-		            </table>
-		        
-		        </div>
-			</div>
-		</div>
+                    <table id="az_lineSetVideo" style="display: none;">
+                        <tr id="az_video_line_id">
+                            <td class="az_tbl_vid_img">
+                                <img src="<?php echo $this->getBaseUrl() ?>axzoom/default-video-thumbnail.jpg" 
+                                    alt="img" title="img" 
+                                    class="img-thumbnail" 
+                                    style="max-width: 100px; cursor: pointer;">
+                            </td>
+                            <td class="az_tbl_vid_name">
+                                video_name
+                            </td>
+                            <td>
+                                <span class="switch prestashop-switch fixed-width-lg hide_class az_switch_status_video">
+                                    <input type="radio" name="status_field" id="status_field_on" value="1" checked_on />
+                                    <label class="t" for="status_field_on"><?php echo __('Yes'); ?></label>
+                                    <input type="radio" name="status_field" id="status_field_off" value="0" checked_off />
+                                    <label class="t" for="status_field_off"><?php echo __('No'); ?></label>
+                                    <a class="slide-button btn"></a>
+                                </span>
+                            </td>
+                            <td class="az_tbl_vid_type">video_type</td>
+                            <td class="az_tbl_vid_uid" style="word-break: break-all;">video_uid</td>
+                            <td>
+                                <button class="az_delete_video scalable delete" style="margin-bottom: 5px;">
+                                    <span> <?php echo __('Delete'); ?></span>
+                                </button>
+                                <button class="az_preview_video " style="margin-bottom: 5px;">
+                                    <span> <?php echo __('Preview'); ?> </span>
+                                </button>
+                                <button class="az_edit_video " style="margin-bottom: 5px;">
+                                    <span> <?php echo __('Edit'); ?></span>
+                                </button>
+                            </td>
+                        </tr>
+                    </table>
+                
+                </div>
+            </div>
+        </div>
 
 
-	</div>
+    </div>
 </div>
 
 <style type="text/css">
-	
-	#az_settings_video input[type=text],
-	#az_settings_video select {
-		margin-bottom: 5px;
-	}
-	
-	.hor-add-btn {
-		border-top: 3px solid #f0f0f0;
-    	margin-top: 20px;
-    	padding-top: 20px;
-	}
+    
+    #az_settings_video input[type=text],
+    #az_settings_video select {
+        margin-bottom: 5px;
+    }
+    
+    .hor-add-btn {
+        border-top: 3px solid #f0f0f0;
+        margin-top: 20px;
+        padding-top: 20px;
+    }
 
 </style>
 
@@ -493,8 +493,8 @@ jQuery(function($) {
     $(document).ready(function() {
 
         //if ($.isPlainObject(az_videos)) { // AZ: does not work (return false)
-        	console.log(az_videos);
-            $.each(az_videos, function(a, b) {            	
+            console.log(az_videos);
+            $.each(az_videos, function(a, b) {                
                 az_addVideoLine(b);
             });
         //}
